# python-versioning

./: .gitignore  README.md  setup.cfg  version.py
src/: foo.py
