[metadata]
name = Python-versioning-test
author = Roy Prins
author-email = prinsroy@gmail.com
summary = Test library for versioning and releases
license = MIT
description-file =
    README.md
home-page = http://pypi.python.org/pypi/python-versioning-test
requires-python = >=3.4
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    src
